RESOLVED FIXED322077
[Site Isolation] endPrinting is routed to the main-frame process, leaking print state in cross-site subframe processes
https://bugs.webkit.org/show_bug.cgi?id=322077
Summary [Site Isolation] endPrinting is routed to the main-frame process, leaking pri...
Matt Woodrow
Reported 2026-08-18 18:39:58 PDT
Attachments
Matt Woodrow
Comment 1 2026-08-18 18:41:42 PDT
EWS
Comment 2 2026-08-20 00:43:15 PDT
Committed 319511@main (273837bcb9ab): <https://commits.webkit.org/319511@main> Reviewed commits have been landed. Closing PR #71916 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.