[Site Isolation] endPrinting is routed to the main-frame process, leaking print state in cross-site subframe processes. https://bugs.webkit.org/show_bug.cgi?id=322077 <rdar://182930024>

Reviewed by Aditya Keerthi.

Hold the frame ID that was used to start printing, and route endPrinting to the right process.

* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[WKWebView _computePagesForPrinting:completionHandler:]):
(-[WKWebView _endPrintingForTesting:]):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::beginPrinting):
(WebKit::WebPageProxy::endPrinting):
(WebKit::WebPageProxy::computePagesForPrinting):
(WebKit::WebPageProxy::drawPagesForPrinting):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, EndPrintingIsRoutedToTheFrameThatStartedPrinting)):

Canonical link: https://commits.webkit.org/319511@main